--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "element-plus": "^2.9.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
